correct bug with cards alignment

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -370,10 +370,9 @@ header a{
 }
 
 .landing-resources__cards .card {
+    border: none;
     border-radius: .75rem;
-    border: 0;
-    box-shadow: 0px 20px 19px 0px rgba(135,135,135,0.3);
-    margin-bottom: 2rem;
+    margin-bottom: 0;
 }
 
 .landing-resources__cards .card-section p {
@@ -383,6 +382,14 @@ header a{
 
 .landing-resources__cards .card-section--header {
     font-weight: 700;
+}
+
+.resource-choice {
+    background-color: #fff;
+    border-radius: .75rem;
+    border: 0;
+    box-shadow: 0px 20px 19px 0px rgba(135,135,135,0.3);
+    margin-bottom: 2rem;
 }
 
 /* Footer */
